--- a/index.html
+++ b/index.html
@@ -84,6 +84,40 @@
     </div>
   </section>
 
+<!-- ЗАДАНИЕ 1: 3 карточки glassmorphism -->
+<section class="assignment-section glass-section reveal-on-scroll">
+  <div class="container">
+    <h2 class="section-title">Олимпийские ценности</h2>
+    <p class="section-text">Три основные ценности олимпийского движения в современной интерпретации</p>
+    <div class="glass-cards">
+      <div class="glass-card card-1">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="glass-card-inner">
+          <h3>Дружба</h3>
+          <p>Олимпийские игры объединяют спортсменов со всего мира, способствуя взаимопониманию и уважению между культурами.</p>
+        </div>
+      </div>
+      <div class="glass-card card-2">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="glass-card-inner">
+          <h3>Совершенство</h3>
+          <p>Стремление к личному лучшему результату, постоянное развитие и преодоление собственных границ.</p>
+        </div>
+      </div>
+      <div class="glass-card card-3">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="glass-card-inner">
+          <h3>Уважение</h3>
+          <p>Уважение к себе, соперникам, правилам и духу честной игры — основа олимпийского движения.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
   <section id="symbols" class="section alt reveal-on-scroll">
     <div class="container">
       <h2 class="section-title">Символика Олимпийских игр</h2>
@@ -100,6 +134,71 @@
           <h3>Девиз</h3>
           <p><em>«Быстрее, выше, сильнее — вместе»</em> подчёркивает и личные достижения, и идею сотрудничества.</p>
         </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- ЗАДАНИЕ 4: 3 карточки с flexbox -->
+  <section class="assignment-section flexbox-section reveal-on-scroll">
+    <div class="container">
+      <h2 class="section-title">Исторические эпохи Олимпиад</h2>
+      <p class="section-text">Ключевые периоды развития олимпийского движения</p>
+      <div class="flexbox-cards">
+        <div class="flexbox-card">
+          <div class="card-number">01</div>
+          <h3>Античные Игры</h3>
+          <p>Проводились в Древней Греции с 776 г. до н.э. до 393 г. н.э. Были частью религиозного культа Зевса.</p>
+          <p>Соревнования включали бег, борьбу, метание диска и копья, гонки на колесницах.</p>
+        </div>
+        <div class="flexbox-card">
+          <div class="card-number">02</div>
+          <h3>Возрождение</h3>
+          <p>Пьер де Кубертен возродил Игры в 1896 году в Афинах. Участвовали 14 стран и 241 спортсмен.</p>
+          <p>Появление современных видов спорта и международного участия.</p>
+        </div>
+        <div class="flexbox-card">
+          <div class="card-number">03</div>
+          <h3>Современная эра</h3>
+          <p>С 1980-х годов Игры стали глобальным медиасобытием. Появление зимних Олимпиад, Паралимпийских игр.</p>
+          <p>Участие более 200 стран, цифровые технологии, экологическая устойчивость.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ЗАДАНИЕ 5: 3 карточки с лучами -->
+  <section class="assignment-section ray-section reveal-on-scroll">
+    <div class="container">
+      <h2 class="section-title">Олимпийские медали</h2>
+      <p class="section-text">Три вида наград, к которым стремятся спортсмены всего мира</p>
+      <div class="ray-cards">
+        <div class="ray-card">
+          <div class="medal-icon">🥇</div>
+          <h3>Золотая медаль</h3>
+          <p>Высшая награда за первое место. Символ абсолютного превосходства в олимпийском виде спорта.</p>
+          <div class="card-details">
+            <span>Чистота: 92.5% серебра</span>
+            <span>Позолота: 6 г золота</span>
+          </div>
+        </div>
+        <div class="ray-card">
+          <div class="medal-icon">🥈</div>
+          <h3>Серебряная медаль</h3>
+          <p>Награда за второе место. Достижение, достойное высочайшего уважения и признания.</p>
+          <div class="card-details">
+            <span>Чистота: 92.5% серебра</span>
+            <span>Вес: ~550 г</span>
+          </div>
+        </div>
+        <div class="ray-card">
+          <div class="medal-icon">🥉</div>
+          <h3>Бронзовая медаль</h3>
+          <p>Награда за третье место. Свидетельство принадлежности к мировой спортивной элите.</p>
+          <div class="card-details">
+            <span>Состав: медь с оловом</span>
+            <span>Вес: ~450 г</span>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -128,23 +227,78 @@
     </div>
   </section>
 
+  <!-- ЗАДАНИЕ 3: Форма регистрации glassmorphism -->
+  <section class="assignment-section form-section reveal-on-scroll">
+    <div class="container">
+      <h2 class="section-title">Присоединиться к сообществу</h2>
+      <p class="section-text">Зарегистрируйтесь для получения новостей об Олимпийских играх</p>
+      <div class="form-wrapper">
+        <form class="glass-form">
+          <div class="form-group">
+            <label for="username">Имя пользователя</label>
+            <input type="text" id="username" name="username" placeholder="Введите имя">
+          </div>
+          <div class="form-group">
+            <label for="email">Электронная почта</label>
+            <input type="email" id="email" name="email" placeholder="example@mail.com">
+          </div>
+          <div class="form-group">
+            <label for="password">Пароль</label>
+            <input type="password" id="password" name="password" placeholder="Не менее 8 символов">
+          </div>
+          <div class="form-options">
+            <label class="checkbox">
+              <input type="checkbox" checked>
+              <span>Получать новости об Олимпиаде</span>
+            </label>
+          </div>
+          <button type="submit" class="form-btn">Зарегистрироваться</button>
+          <div class="form-links">
+            <a href="#" class="form-link">Забыли пароль?</a>
+            <a href="#" class="form-link">Уже есть аккаунт? Войти</a>
+          </div>
+        </form>
+      </div>
+    </div>
+  </section>
 
-<section class="live-facts-section reveal">
-  <h2 class="section-title">Интересные факты об Олимпийских играх</h2>
-  <p class="live-facts-subtitle">
-    Эти карточки создаются динамически на JavaScript — пример «живого» контента.
-  </p>
-  <div class="live-facts-grid" id="liveFacts"></div>
-</section>
-
+  <section class="live-facts-section reveal">
+    <h2 class="section-title">Интересные факты об Олимпийских играх</h2>
+    <div class="live-facts-grid" id="liveFacts"></div>
+  </section>
 </main>
 
 <button id="toTop" title="Наверх">↑</button>
 
+<!-- ЗАДАНИЕ 2: Кнопки соцсетей в футере -->
 <footer>
   <div class="container footer-inner">
-    <p>© 2025 Олимпийские игры — курсовая работа</p>
-    <p class="footer-note">Материал подготовлен в учебных целях.</p>
+    <div class="footer-main">
+      <div class="footer-info">
+        <p>© 2025 Олимпийские игры — курсовая работа</p>
+        <p class="footer-note">Материал подготовлен в учебных целях.</p>
+      </div>
+      <div class="social-section">
+        <h3>Подписывайтесь на нас</h3>
+        <div class="social-buttons">
+          <a href="#" class="social-btn youtube-btn">
+            <span class="social-icon">▶️</span>
+            <span class="social-text">YouTube</span>
+          </a>
+          <a href="#" class="social-btn instagram-btn">
+            <span class="social-icon">📸</span>
+            <span class="social-text">Instagram</span>
+          </a>
+          <a href="#" class="social-btn twitter-btn">
+            <span class="social-icon">🐦</span>
+            <span class="social-text">Twitter</span>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>Сайт создан в рамках изучения веб-разработки и соответствует всем требованиям практического задания</p>
+    </div>
   </div>
 </footer>
 </body>
