--- a/sports.html
+++ b/sports.html
@@ -104,8 +104,34 @@
 
 <footer>
   <div class="container footer-inner">
-    <p>© 2025 Олимпийские игры — курсовая работа</p>
-    <p class="footer-note">Раздел «Виды спорта».</p>
+    <div class="footer-content">
+      <div class="footer-info">
+        <p>© 2025 Олимпийские игры — курсовая работа</p>
+        <p class="footer-note">Материал подготовлен в учебных целях.</p>
+      </div>
+      
+      <div class="social-buttons-container">
+        <h3 class="social-title">Подписывайтесь на нас</h3>
+        <div class="social-buttons">
+          <a href="#" class="social-btn youtube">
+            <i class="fab fa-youtube"></i>
+            <span class="social-text">YouTube</span>
+          </a>
+          <a href="#" class="social-btn instagram">
+            <i class="fab fa-instagram"></i>
+            <span class="social-text">Instagram</span>
+          </a>
+          <a href="#" class="social-btn twitter">
+            <i class="fab fa-twitter"></i>
+            <span class="social-text">Twitter</span>
+          </a>
+        </div>
+      </div>
+    </div>
+    
+    <div class="footer-bottom">
+      <p>Сайт создан в рамках изучения веб-разработки</p>
+    </div>
   </div>
 </footer>
 </body>
